@@ -84,6 +84,7 @@
     <None Include="shape_eg_data\mexico\states.sbx" />
     <None Include="shape_eg_data\mexico\states.shx" />
     <None Include="maps\mexico.xml" />
+    <None Include="maps\postgis.xml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="shape_eg_data\mexico\cities.shp">
